# cks-runtime

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
cks_runtime/: __init__.py  config.py  runtime.py
cks_runtime/adapters/mcp/: __init__.py  adapter.py  contracts.py  errors.py  handlers.py  serializers.py  tool_registry.py
cks_runtime/core/: interfaces.py
cks_runtime/core_api/: __init__.py  adapter.py  bridge.py  interfaces.py  merge_conflict.py  validation_result.py
cks_runtime/diagnostics/: aggregator.py  diagnostic.py
cks_runtime/dispatcher/: dispatcher.py
cks_runtime/embedding/: __init__.py  client.py
cks_runtime/events/: event_bus.py  runtime_event.py
cks_runtime/execution/: execution_context.py  operation_executor.py
cks_runtime/explainability/: explainability_manager.py
cks_runtime/metrics/: __init__.py  collector.py
cks_runtime/operations/: operation_registry.py  operation_types.py
cks_runtime/pipeline/: execution_pipeline.py
cks_runtime/projection/: __init__.py  embedding_projection.py  outbox_worker.py
cks_runtime/session/: session.py  session_manager.py
cks_runtime/storage/: exceptions.py  memory_storage.py  sqlite_storage.py  storage.py
cks_runtime/transaction/: transaction.py  transaction_manager.py
cks_runtime/versioning/: version.py  version_manager.py
cks_runtime_core/: __init__.py  adapter.py
cks_runtime_plugins/cks_core/: __init__.py  adapter.py
docs/adr/: ADR-001 Runtime Layering.md  ADR-002 Session Ownership.md  ADR-003 Transaction Model.md  ADR-004 Storage Abstraction.md  ADR-005 Version History.md  ADR-006 Adapter Architecture.md
docs/analysis/: ANALYSIS-001_Runtime_Dependencies_on_CKS_Core.md
docs/architecture/: ARCH-001_Runtime_Architecture.md
docs/charter/: CHARTER.md
docs/standards/runtime/: SPEC-001_Runtime_Overview.md  SPEC-002_Session_Model.md  SPEC-003_Runtime_API.md  SPEC-004_Diagnostics.md  SPEC-005_Transactions.md  SPEC-006_Storage.md  SPEC-007_Version_History.md  SPEC-008_Conformance.md
tests/: conftest.py  test_core_adapter.py
tests/cks_runtime_plugins/cks_core/: test_adapter.py
tests/unit/adapters/mcp/: test_serializers.py  test_tool_registry.py
tests/unit/core_api/: test_adapter.py  test_bridge.py  test_bridge_merge.py  test_interfaces.py  test_validation_result.py
tests/unit/diagnostics/: test_diagnostics.py
tests/unit/dispatcher/: dispatcher.py  test_dispatcher.py
tests/unit/events/: test_event_bus.py  test_runtime_event.py
tests/unit/execution/: test_diff_operation.py  test_execution_context.py  test_merge_operation.py  test_operation_executor.py
tests/unit/operations/: test_operation_registry.py  test_operation_types.py
tests/unit/pipeline/: test_pipeline.py
tests/unit/projection/: test_embedding_projection.py
tests/unit/runtime/: test_core_integration.py  test_runtime.py
tests/unit/session/: test_session.py  test_session_manager.py  test_session_version_reconstruction.py
tests/unit/storage/: test_memory_storage.py  test_restart_persistence.py  test_sqlite_storage.py  test_storage_exceptions.py
tests/unit/transaction/: test_transaction.py  test_transaction_manager.py
tests/unit/versioning/: test_delta_versions.py  test_runtime_version.py  test_version_manager.py
