[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cks-runtime"
version = "0.1.0"

description = "Canonical Runtime for Canonical Knowledge Structures"

readme = "README.md"

requires-python = ">=3.11"

license = { text = "MIT" }

authors = [
    { name = "Deus Corp" }
]

keywords = [
    "cks",
    "runtime",
    "knowledge",
    "architecture",
    "canonical"
]

classifiers = [
    "Development Status :: 3 - Alpha",

    "Intended Audience :: Developers",

    "License :: OSI Approved :: MIT License",

    "Programming Language :: Python :: 3",

    "Programming Language :: Python :: 3.11",

    "Programming Language :: Python :: 3.12",

    "Operating System :: OS Independent"
]

dependencies = [
    "cks-core>=0.1.0"
]

[project.optional-dependencies]

dev = [
    "pytest>=8",
    "ruff>=0.6",
    "mypy>=1.10"
]

[project.urls]

Homepage = "https://github.com/Deus-corp/cks-runtime"

Repository = "https://github.com/Deus-corp/cks-runtime"

Issues = "https://github.com/Deus-corp/cks-runtime/issues"

[tool.setuptools]

include-package-data = true

[tool.setuptools.packages.find]

include = [
    "cks_runtime*"
]

[tool.pytest.ini_options]

testpaths = [
    "tests"
]

python_files = [
    "test_*.py"
]

[tool.ruff]

line-length = 88

target-version = "py311"

[tool.ruff.lint]

select = [
    "E",
    "F",
    "I",
    "UP"
]

[tool.mypy]

python_version = "3.11"

strict = true

ignore_missing_imports = true