[build-system]
requires = ["setuptools>=77.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cks-runtime"
version = "0.1.1"

description = "Canonical Runtime for the Canonical Knowledge Structure ecosystem"

readme = "README.md"

authors = [
    { name = "Vladyslav Hruznov" }
]

license = { text = "MIT" }

requires-python = ">=3.11.15"

dependencies = [
    "cks-core>=1.0.0",
]

keywords = [
    "canonical-knowledge-structure",
    "runtime",
    "knowledge-runtime",
    "transactions",
    "sessions",
    "versioning",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11.15",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/Deus-corp/cks-runtime"
Documentation = "https://github.com/Deus-corp/cks-runtime"

[tool.setuptools.packages.find]
where = ["."]
include = ["cks_runtime*"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "mypy>=1.0",
]