[build-system]
requires = ["setuptools>=77.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cks-runtime"
version = "1.2.0"

description = "Canonical Runtime for the Canonical Knowledge Structure ecosystem"

readme = "README.md"

authors = [
    { name = "Vladyslav Hruznov" }
]

license = { text = "MIT" }

requires-python = ">=3.12"

dependencies = [
    "cks-core>=1.7.0",
    "cks-mcp>=1.0.4",
]

keywords = [
    "canonical-knowledge-structure",
    "runtime",
    "knowledge-runtime",
    "transactions",
    "sessions",
    "versioning",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/Deus-corp/cks-runtime"
Repository = "https://github.com/Deus-corp/cks-runtime"
Issues = "https://github.com/Deus-corp/cks-runtime/issues"

[tool.setuptools.packages.find]
where = ["."]
include = [
    "cks_runtime*",
    "cks_runtime_plugins*",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "mypy>=1.0",
]